--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
